fix(feedback-widget): solution for widget slide-in on mobile (#192)
* testing adding overflow hidden to root

* testing adding width on mobile

* testing fixed

* Fixing mobile widget slide in with intersection observer

* adding in tweaks so the code only runs on mobile

* Fixing icon side panel in icon library being under the feedback widget and not accounting for new sticky nav.

---------

--- a/src/components/icon-search/icon-search.css
+++ b/src/components/icon-search/icon-search.css
@@ -8,6 +8,9 @@
 	padding-block: 7--step;
 	padding-inline: 8--step;
 
+	/* Accounting for being a higher z than the feedback widget tab */
+	z-index: 2;
+
 	/* Appearance */
 	background-color: var(--PrimaryColor);
 	//box-shadow: -2px 2px 4px #00000040;
